Fix nav on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -159,6 +159,9 @@ button {
 footer {
   background-image: url(assets/bg-seal.png);
   background-repeat: no-repeat;
+  background-position-x: 10px;
+  background-position-y: 10px;
+  background-size: 500px;
 }
 
 body {
